<resources>
    <string name="app_name">Local External Storage</string>
    <string name="title">Save data to local and external storage</string>
    <string name="local_storage">Local Storage</string>
    <string name="external_storage">External Storage</string>
    <string name="title_activity_local_storage">Local Storage</string>
    <string name="title_activity_external_storage">External Storage</string>
    <string name="title_activity_save_local">Add Text File</string>
    <string name="file_name">File name</string>
    <string name="your_file_name">Your file name…</string>
    <string name="file_content">File Content</string>
    <string name="your_file_content">Your file content…</string>
    <string name="title_activity_save_external">Add Text File</string>
    <string name="title_activity_testingdoang">TESTINGDOANG</string>
    <string name="no_data">There is no data</string>
    <string name="image_delete_text_file">Image Delete Text File</string>
</resources>
