<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimen_16dp"
    android:gravity="center"
    tools:context=".InitialActivity">

    <ImageView
        android:layout_width="@dimen/dimen_150dp"
        android:layout_height="@dimen/dimen_150dp"
        android:src="@drawable/bluejack"/>

    <TextView
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="@android:color/black"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_local_storage"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            android:layout_marginEnd="@dimen/dimen_8dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/local_storage"/>

        <Button
            android:id="@+id/btn_external_storage"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/external_storage"/>

    </LinearLayout>

</LinearLayout>